--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ body {
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     color: var(--main-color);
-    background-color: var(--main-background)
 }
 .header-adress,
 .benefits-list,
@@ -42,47 +41,24 @@ body {
 .header-black-logo {
     color: var(--main-color);
 }
-.studio,
-.portfolio,
-.contacts,
-.header-mail,
-.header-phone {
-    cursor: pointer;
-}
-.studio, .portfolio, .contacts {
+.nav-link {
     color: var(--main-color);
     text-decoration: none;
+    cursor: pointer;
 }
-.studio:active, 
-.portfolio:active, 
-.contacts:active {
+.nav-link:active,
+.nav-link:hover,
+.nav-link:focus {
     color: var(--brand-color);
 }
-.studio:hover,
-.portfolio:hover,
-.contacts:hover {
-    color: var(--brand-color);
-}
-.studio:focus,
-.portfolio:focus,
-.contacts:focus {
-    color: var(--brand-color);
-}
-.header-mail,
-.header-phone {
+.adress-link {
     text-decoration: none;
     color: var(--secondary-text-color);
+    cursor: pointer;
 } 
-.header-mail:active,
-.header-phone:active {
-    color: var(--brand-color);
-}
-.header-mail:hover,
-.header-phone:hover{
-    color: var(--brand-color);
-}
-.header-mail:focus,
-.header-phone:focus{
+.adress-link:active,
+.adress-link:hover,
+.adress-link:focus {
     color: var(--brand-color);
 }
 
@@ -107,6 +83,7 @@ body {
     font-size: 16px;
     line-height: 1.88;
     background-color: var(--brand-color);
+    border-radius: 4px;
 }
 .button {
     cursor: pointer;
@@ -230,7 +207,10 @@ body {
     line-height: 1.62;
     letter-spacing: 0.03em;
     text-align: center;
-    color: var(--main-color)
+    color: var(--main-color);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
      
 }
 .filter-button:active,
