--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ body {
 }
 .nav-link {
     color: var(--main-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     text-decoration: none;
     cursor: pointer;
 }
@@ -54,12 +58,19 @@ body {
 .adress-link {
     text-decoration: none;
     color: var(--secondary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     cursor: pointer;
 } 
 .adress-link:active,
 .adress-link:hover,
 .adress-link:focus {
     color: var(--brand-color);
+}
+.current {
+color: var(--brand-color);
 }
 
 /* -------MAIN------- */
@@ -109,12 +120,14 @@ body {
   
 .benefit-title {
     font-weight: 700;
+    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 .benefit-text {
     line-height: 1.71;
+    font-size: 14px;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
 }
